in check_mcontext32(), accept the LDT selector for 32-bit user code as well as the GDT selector.  fixes PR 43835.